syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";
import "seiprotocol/seichain/dex/params.proto";
import "seiprotocol/seichain/dex/long_book.proto";
import "seiprotocol/seichain/dex/short_book.proto";
import "seiprotocol/seichain/dex/tick_size.proto";
import "seiprotocol/seichain/dex/order.proto";
import "seiprotocol/seichain/dex/contract.proto";
import "seiprotocol/seichain/dex/pair.proto";
import "seiprotocol/seichain/dex/match_result.proto";
import "seiprotocol/seichain/dex/price.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated ContractState contractState = 2 [(gogoproto.nullable) = false];
  uint64 lastEpoch = 3;
  // this line is used by starport scaffolding # genesis/proto/state
}

message ContractState {
  ContractInfoV2 contractInfo = 1 [(gogoproto.nullable) = false];
  repeated LongBook longBookList = 2 [(gogoproto.nullable) = false];
  repeated ShortBook shortBookList = 3 [(gogoproto.nullable) = false];
  repeated Order triggeredOrdersList = 4 [(gogoproto.nullable) = false];
  repeated Pair pairList = 5 [(gogoproto.nullable) = false];
  repeated ContractPairPrices priceList = 6 [(gogoproto.nullable) = false];
}

message ContractPairPrices {
  Pair pricePair = 1 [(gogoproto.nullable) = false];
  repeated Price prices = 2;
}
